Synchronizing with github
git-svn-id: svn+ssh://svn.code.sf.net/p/delicon/code/trunk/deli2@62 08024ebc-0e4b-0410-a14a-bd40bbbb9cc1